Fix condition on firefox

--- a/src/app/routes/cards/condition/condition.component.scss
+++ b/src/app/routes/cards/condition/condition.component.scss
@@ -18,10 +18,11 @@
     max-width: 400px;
     margin: 30px 0;
     position: relative;
+    display: flex;
+    align-items: center;
 
     .right-arrow, .left-arrow {
       position: absolute;
-      bottom: -2px;
       color: white;
     }
   }
@@ -34,6 +35,10 @@
 
     &:focus {
       outline: none;
+    }
+
+    &::-moz-focus-outer {
+      border: 0;
     }
 
     // CIRCLE THUMB
@@ -50,13 +55,8 @@
       box-shadow: 0 0 15px 5px white;
     }
 
-    &::-webkit-slider-thumb::before {
-      content: "<";
-      color: white;
-      font-size: 40px;
-    }
-
     &::-moz-range-thumb {
+      -moz-appearance: none;
       border: 1px solid white;
       height: 25px;
       width: 25px;
@@ -65,26 +65,6 @@
       cursor: pointer;
       box-shadow: 0 0 15px 5px white;
     }
-
-    &::-ms-thumb {
-      border: 1px solid white;
-      height: 25px;
-      width: 25px;
-      border-radius: 50%;
-      background: #ffffff;
-      cursor: pointer;
-      box-shadow: 0 0 15px 5px white;
-    }
-
-    &::-ms-track {
-      width: 100%;
-      cursor: pointer;
-    
-      background: transparent; 
-      border-color: transparent;
-      color: transparent;
-    }
-
     // TRACK LINE
 
     &::-webkit-slider-runnable-track {
@@ -97,40 +77,10 @@
 
     &::-moz-range-track {
       width: 100%;
-      height: 8.4px;
+      height: 5px;
       cursor: pointer;
-      box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-      background-image: linear-gradient(to right, black, white);
-      border-radius: 1.25px;
-      border: 0.1px solid #010101;
-    }
-    
-    &::-ms-track {
-      width: 100%;
-      height: 8.4px;
-      cursor: pointer;
-      background: transparent;
-      border-color: transparent;
-      border-width: 16px 0;
-      color: transparent;
-    }
-    &::-ms-fill-lower {
-      background-image: linear-gradient(to right, black, white);
-      border: 0.1px solid #010101;
-      border-radius: 2.5px;
-      box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    }
-    &:focus::-ms-fill-lower {
-      background-image: linear-gradient(to right, black, white);
-    }
-    &::-ms-fill-upper {
-      background-image: linear-gradient(to right, black, white);
-      border: 0.1px solid #010101;
-      border-radius: 2.5px;
-      box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    }
-    &:focus::-ms-fill-upper {
-      background-image: linear-gradient(to right, black, white);
+      background-image: linear-gradient(to right, #6C6D70, #6C6D70);
+      border-radius: 1.5px;
     }
   }
 
@@ -151,19 +101,19 @@
 .condition {
   &__range {
     &.range-0 {
-      &::-webkit-slider-runnable-track {
+      &::-webkit-slider-runnable-track, &::-moz-range-track {
         background-image: linear-gradient(to right, #6C6D70, #6C6D70);
       }
     }
 
     &.range-1 {
-      &::-webkit-slider-runnable-track {
+      &::-webkit-slider-runnable-track, &::-moz-range-track {
         background-image: linear-gradient(to right, #BCBDC0, #BCBDC0 50%, #6C6D70 50%, #6C6D70);
       }
     }
 
     &.range-2 {
-      &::-webkit-slider-runnable-track {
+      &::-webkit-slider-runnable-track, &::-moz-range-track {
         background-image: linear-gradient(to right, #BCBDC0, #BCBDC0);
       }
     }
